[tool.poetry]
name = "x-orm"
version = "0.1.0"
description = ""
authors = ["black <joseb.twelve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
maturin = "^1.7.4"


# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

